cli/tests/snapshots/cli__run_images@polygon5.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/polygon5.py
---
<svg width="80" height="80" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0 0 L 80 0 L 80 80 L 0 80 Z" fill="rgba(60, 179, 113, 1.0)" />
    <path d="M 15 15 L 65 15 L 15 65 L 65 65 Z" fill="none" stroke="rgba(47, 79, 79, 1.0)" stroke-width="10" stroke-linecap="square" stroke-linejoin="miter" />
  </g>
</svg>
