cli/tests/snapshots/cli__run_images@pulled_regular_polygon3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/pulled_regular_polygon3.py
---
<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 50 C 0 50 0 0 0 0 C 0 0 50 0 50 0 C 50 0 50 50 50 50 C 50 50 0 50 0 50 Z" fill="rgba(255, 165, 0, 1.0)" />
</svg>
