cli/tests/snapshots/cli__run_images@put_image1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/put_image1.py
---
<svg width="50.0" height="50.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="50.0" height="50.0" transform="rotate(0.0 25.0 25.0)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 50.0 0.0 L 50.0 50.0 L 0.0 50.0 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M 50.0 35.0 A 10.0 15.0 0.0 0 1 30.0 35.0 A 10.0 15.0 0.0 0 1 50.0 35.0 Z" fill="rgba(255, 0, 0, 1.0)" />
    </g>
  </g>
</svg>
