cli/tests/snapshots/cli__run_images@radial_star2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/radial_star2.py
---
<svg width="80" height="80" xmlns="http://www.w3.org/2000/svg">
  <path d="M 35.5 79.5 L 33.5 69.5 L 28.5 78.5 L 28.5 67.5 L 20.5 75.5 L 23.5 64.5 L 14.5 70.5 L 18.5 61.5 L 8.5 65.5 L 14.5 56.5 L 4.5 58.5 L 12.5 51.5 L 1.5 51.5 L 10.5 45.5 L 0.5 43.5 L 9.5 39.5 L 0.5 35.5 L 10.5 33.5 L 1.5 28.5 L 12.5 28.5 L 4.5 20.5 L 14.5 23.5 L 8.5 14.5 L 18.5 18.5 L 14.5 8.5 L 23.5 14.5 L 20.5 4.5 L 28.5 12.5 L 28.5 1.5 L 33.5 10.5 L 35.5 0.5 L 39.5 9.5 L 43.5 0.5 L 45.5 10.5 L 51.5 1.5 L 51.5 12.5 L 58.5 4.5 L 56.5 14.5 L 65.5 8.5 L 61.5 18.5 L 70.5 14.5 L 64.5 23.5 L 75.5 20.5 L 67.5 28.5 L 78.5 28.5 L 69.5 33.5 L 79.5 35.5 L 69.5 39.5 L 79.5 43.5 L 69.5 45.5 L 78.5 51.5 L 67.5 51.5 L 75.5 58.5 L 64.5 56.5 L 70.5 65.5 L 61.5 61.5 L 65.5 70.5 L 56.5 64.5 L 58.5 75.5 L 51.5 67.5 L 51.5 78.5 L 45.5 69.5 L 43.5 79.5 L 39.5 69.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
