cli/tests/snapshots/cli__run_images@rectangle1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/rectangle1.py
---
<svg width="40" height="20" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.5 0.5 L 40.5 0.5 L 40.5 20.5 L 0.5 20.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
