cli/tests/snapshots/cli__run_images@rectangle2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/rectangle2.py
---
<svg width="20.0" height="40.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0.0 0.0 L 20.0 0.0 L 20.0 40.0 L 0.0 40.0 Z" fill="rgba(0, 0, 0, 1.0)" />
</svg>
