cli/tests/snapshots/cli__run_images@regular_polygon3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/regular_polygon3.py
---
<svg width="49" height="49" xmlns="http://www.w3.org/2000/svg">
  <path d="M 14.142136 48.284271 L 0 34.142136 L 0 14.142136 L 14.142136 0 L 34.142136 0 L 48.284271 14.142136 L 48.284271 34.142136 L 34.142136 48.284271 Z" fill="rgba(255, 0, 0, 1.0)" />
</svg>
